fix spacing

--- a/website/src/app/components/home/home.component.scss
+++ b/website/src/app/components/home/home.component.scss
@@ -358,7 +358,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
-        margin-bottom: 1rem;
+        margin-bottom: 0.75rem;
 
         i {
           color: var(--primary-orange);
@@ -377,7 +377,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
-        margin-bottom: 1rem;
+        margin-bottom: 0.75rem;
 
         i {
           color: var(--primary-orange);
